--- a/themes/book-store/package.json
+++ b/themes/book-store/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "embla-carousel": "^8.6.0",
     "sass-embedded": "^1.97.3",
     "scss": "^0.2.4",
     "vite": "^7.3.1"
