chore: disable opcache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ./themes:/winter/themes
       - ./plugins:/winter/plugins
       - ./storage:/winter/storage
+
+      - ./disable-opcache.ini:/usr/local/etc/php/conf.d/zz-disable-opcache.ini
     networks:
       - app-net
 
